2014-19-08 Howard Butler <hobu.inc@gmail.com>

	* src/pj_init.c: apply fix specified in #229  -- pj_init_plus() with init
	and other parms fails in 4.9.0beta

2014-06-06 Even Rouault <even.rouault@mines-paris.org>

	* src/PJ_omerc.c: mark no_off/no_uoff as used for round-tripping
	pj_init_ctxt()/pj_get_def() (#239)

2014-05-14 Even Rouault <even.rouault@mines-paris.org>

	* nad/epsg: Upgraded to EPSG 8.4

2013-12-09  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_geos.c, testvarious: reverse sense of sweep flag. (#146)

2013-12-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_qsc.c: Add QSC projection (#179)

2013-10-27  Frank Warmerdam  <warmerdam@gdal-c>

	* Prepare 4.9.0beta2 release.

2013-10-21  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_omerc.c: Change handling of values nearly 90degrees away from
	the origin (#114).

	* src/pj_datums.c: Switch to using EPSG:1618 COORD_OP_CODE to transform
	hermannskogel to WGS84 (same as used to ETRS89) (#207).

2013-10-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/Makefile.am: Given up on restricting access to projects.h, and
	move it back into the list of files installed normally.

	* configure.in: Add C_WFLAGS support, in particular use
	-Wdeclaration-after-statement to warn about code that won't work
	with MSVC (#224).

	* src/cs2cs.c: Support -I when there is no +to projection.

	* src/PJ_ob_tran.c: Propogate ctx into sub-projection (#225).

2013-10-03  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_healpix.c: Fix healpix build on msvc. (#223)

2013-10-01  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Upgraded to EPSG 8.2.

2013-07-21  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj_etmerc.c: Fix two errors in the n**5 coefficients.  Add 
	sixth order coefficients.  Fix rounding problems (#222)

2013-07-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_healpix.c: major update for polar scaling and parms (#219)

2013-07-12  Frank Warmerdam  <warmerdam@pobox.com>
